@@ -1,6 +1,8 @@
 Changes in 0.62.15:
   * The MakeDevices() policy now accepts mode= as a named argument.
-  * Added (undocumented) --verbose
+  * Added (undocumented) --debug (prints debugging output), 
+    switched old (undocumented) --debug to now be --debugger (starts debugger
+    on initialization)
   * Added debug messages to conaryclient/update.py
   * Cloning to the the same branch works (providing a good way of
     reverting changes)
